# git_test

./: Makefile  README.md  a.out  list.c  list.h  main.c
homework/: Phase3day3.cpp  coding test day3.cpp  codingtest.cpp  main.cpp  phase3day3.cpp  readme.md  test.cpp
homework/CMake/: CMakeLists.txt  test.cpp
homework/CMake/build_2/: CMakeCache.txt  Makefile  cmake_install.cmake
homework/CMake/build_lib_test/: CMakeCache.txt  Makefile  cmake_install.cmake  day2
homework/CMake/build_spc_c++/: CMakeCache.txt  Makefile  cmake_install.cmake  day2
homework/CMake/use_lib/: CMakeCache.txt  Makefile  cmake_install.cmake  day2
homework/Maketest/: Makefile  function1.cpp  function2.cpp  hello  main.cpp
homework/cmaketest/: CMakeLists.txt  Phase3day3.cpp  code3.cpp  khankitconf.h.in  main.cpp  muzzammilconf.h.in
homework/cmaketest/emplib/: testlib.cpp  testlib.h
homework/cmaketest/mylib/: test.cpp  testlib.h
homework/cmaketest/syafiqtest/: CMakeLists.txt  codingtest2.cpp
homework/cmaketest/syafiqtest/displaylib/: display.h
homework/cmaketest/zptest3/: CMakeLists.txt  vectortest.cpp
homework/cmaketest/zptest3/mylib/: mylib.h
homework/makefiletest/makefiletest-2/: Makefile  main.cpp  message.cpp  message.h  message.h.gch  target
homework/makefiletest/makefiletest-3/: Makefile  main.cpp  mytest
homework/makefiletest/makefiletest-3/lib/: Makefile  testlib.cpp
homework/makefiletest/makefiletest1/: Makefile  codingtest.cpp  display.cpp  mytest
homework/makefiletest/makefiletest2/: Makefile  codingtest.cpp  mytest
homework/makefiletest/makefiletest2/lib/: Makefile  mylib.cpp  mylib.h
homework/makefiletest/mylib/: mylib.cpp  mylib.h
homework/makefiletest/test1/: .Makefile.swp  Makefile  mytest
homework/makefiletest/test2/: Makefile  test.cpp
homework/makefiletest/test3/: Makefile  mytest  test.cpp
homework/makefiletest/test4/: Makefile  mylib.h.gch
homework/makefiletest/test5/: Makefile  mytest  test.cpp
homework/makefiletest/test5/mylib/: Makefile  mylib.cpp  mylib.h
homework/makefiletest/zptest1/: Makefile  mylib.cpp  mylib.h  vectortest.cpp
homework/makefiletest/zptest2/: Makefile  vectortest.cpp
homework/makefiletest/zptest3/: Makefile  vectortest.cpp
homework/makefiletest/zptest3/lib/: Makefile
